Agent query: Can you scroll down the page and check if the Time Range Report section is visible? If so, are the date range picker and time inputs present and functional?

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,12 @@
     
     <button id="trackButton">Track Bathroom Visit</button>
     
+    <div id="visitSummary">
+        <p>Total visits today: <span id="todayCountSummary">0</span></p>
+        <p>Total visits this week: <span id="weekCountSummary">0</span></p>
+        <p>Average visits per day: <span id="avgCountSummary">0</span></p>
+    </div>
+    
     <div id="trackUrine">
         <h2>Track Urine Output</h2>
         <div class="form-group">
