Agent query: Can you test the 'Generate Time Range Report' functionality by selecting a start date, end date, start time, and end time, then clicking the 'Generate Time Range Report' button? Please check if the count updates correctly and if there are any error messages in the browser console.

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
             <label for="endTime">End Time:</label>
             <input type="time" id="endTime" value="23:59">
         </div>
-        <button id="generateTimeRangeReport">Generate Time Range Report</button>
+        <button id="generateTimeRangeReport" onclick="generateTimeRangeReport()">Generate Time Range Report</button>
         <button id="clearTimeRangeReport">Clear</button>
         <p>Visits in selected time range: <span id="timeRangeCount">0</span></p>
     </div>
