Agent query: Please test the following functionalities and confirm if they are working correctly: 1) Track a bathroom visit, 2) Generate a detailed report with the new 'Back to Home' button, 3) Generate a time range report and check if the console logs the additional debug information, 4) Use the new 'Clear Local Storage' button and verify if it resets all the data.

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,9 @@
     
     <canvas id="weeklyChart" class="chart"></canvas>
     
+    <!-- Add a button to clear local storage -->
+    <button id="clearStorageButton">Clear Local Storage</button>
+    
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script>
         if ('serviceWorker' in navigator) {
